Correct alignment of title in experience cards

--- a/css/style.css
+++ b/css/style.css
@@ -595,7 +595,7 @@ footer {
 
     .experience-card a {
         display: block;
-        height: 190px;
+        height: 100%;
     }
 
     /*********
